# app/controllers/github_controller.py
@@ -76,10 +76,15 @@ def create_org_repo(repositoryName: str, org: str, request: Request = None):
     if status >= 400:
         raise HTTPException(status_code=status, detail=message)
     return {"status_code": status, "message": message}
-@router.get("/listRepositories")
+@router.get("/listRepositoriesOrg")
+def list_repositories_org(org: str, request: Request = None):
+    token = auth.get_github_token(request)
+    status, message = github_req_maker.git_request("GET", f"/orgs/{org}/repos", token)
+    return {"status_code": status, "message": message}
+@router.get("/listRepositoriesUser")
 def list_repositories(currentUser: str = "", request: Request = None):
     token = auth.get_github_token(request)
-    status, message = github_req_maker.git_request("GET", f"/{currentUser}/repos", token)
+    status, message = github_req_maker.git_request("GET", f"/users/{currentUser}/repos", token)
     return {"status_code": status, "message": message}
 
 # ---------- Issues ----------
